// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.selectMany $ariaDetails 1`] = `
<wup-selectmany>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        Some details for screen-readers
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      style="display: none;"
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany $ariaDetails 2`] = `
<wup-selectmany>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style="display: none;"
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany $ariaSpeak 1`] = `
<wup-selectmany>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="my-test-id txt2 my-test-id2"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style="display: none;"
      tabindex="-1"
      type="button"
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  >
    Hello
  </section>
</wup-selectmany>
`;

exports[`control.selectMany $ariaSpeak 2`] = `
<wup-selectmany>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="my-test-id my-test-id2"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style="display: none;"
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany $show/$hide error 1`] = `
<wup-selectmany>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style="display: none;"
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany $show/$hide error 2`] = `
<wup-selectmany
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt2"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style="display: none;"
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="opacity: 0;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      Some custom message here
    </span>
  </wup-popup>
</wup-selectmany>
`;

exports[`control.selectMany $show/$hide error 3`] = `
<wup-selectmany>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style="display: none;"
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany common tests render + styles 1`] = `<wup-selectmany />`;

exports[`control.selectMany common tests render + styles 2`] = `
<style>
  .wup-hidden, [wup-hidden] {
position: absolute;
height:1px; width:1px;
overflow:hidden;
clip:rect(1px,1px,1px,1px);
min-width:initial;
padding:0;}
  :root {
          --base-bg: #fff;
          --base-text: #232323;
          --base-focus: #00778d;
          --base-btn-bg: #009fbc;
          --base-btn-text: #fff;
          --base-btn-focus: #005766;
          --base-btn2-bg: var(--base-btn-text);
          --base-btn2-text: var(--base-btn-bg);
          --base-btn3-bg: var(--base-bg);
          --base-btn3-text: inherit;
          --base-sep: #e4e4e4;
          --border-radius: 6px;
          --anim-time: 200ms;
          --anim: var(--anim-time) cubic-bezier(0, 0, 0.2, 1) 0ms;
        }
  :root {
        --ctrl-padding: 1.5em 1em 0.5em 1em;
        --ctrl-focus: var(--base-focus);
        --ctrl-focus-label: var(--base-focus);
        --ctrl-selected: var(--ctrl-focus-label);
        --ctrl-label: #5e5e5e;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-icon-size: 1em;
        --ctrl-bg: var(--base-bg);
        --ctrl-border: #e6e6e6;
        --ctrl-border-radius: var(--border-radius);
        --ctrl-err-text: #ad0000;
        --ctrl-err-bg: #fff4fa;
        --ctrl-err-icon-valid: green;
        --ctrl-invalid-border: red;
        --wup-icon-cross: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M674.515 93.949a45.925 45.925 0 0 0-65.022 0L384.001 318.981 158.509 93.487a45.928 45.928 0 0 0-65.022 0c-17.984 17.984-17.984 47.034 0 65.018l225.492 225.494L93.487 609.491c-17.984 17.984-17.984 47.034 0 65.018s47.034 17.984 65.018 0l225.492-225.492 225.492 225.492c17.984 17.984 47.034 17.984 65.018 0s17.984-47.034 0-65.018L449.015 383.999l225.492-225.494c17.521-17.521 17.521-47.034 0-64.559z'/%3E%3C/svg%3E");
        --wup-icon-check: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M37.691 450.599 224.76 635.864c21.528 21.32 56.11 21.425 77.478 0l428.035-426.23c21.47-21.38 21.425-56.11 0-77.478s-56.11-21.425-77.478 0L263.5 519.647 115.168 373.12c-21.555-21.293-56.108-21.425-77.478 0s-21.425 56.108 0 77.478z'/%3E%3C/svg%3E");
        --wup-icon-dot: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='20'/%3E%3C/svg%3E");
        --wup-icon-back: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='m509.8 16.068-329.14 329.14c-21.449 21.449-21.449 56.174 0 77.567l329.14 329.14c21.449 21.449 56.174 21.449 77.567 0s21.449-56.174 0-77.567l-290.36-290.36 290.36-290.36c21.449-21.449 21.449-56.173 0-77.567-21.449-21.394-56.173-21.449-77.567 0z'/%3E%3C/svg%3E");
      }
  :root {
      --ctrl-clear-hover: rgba(255,0,0,0.1);
      --ctrl-clear-hover-size: 22px;
     }
  :root {
        --ctrl-select-icon-img: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='m16.078 258.214 329.139 329.139c21.449 21.449 56.174 21.449 77.567 0l329.139-329.139c21.449-21.449 21.449-56.174 0-77.567s-56.174-21.449-77.567 0L384 471.003 93.644 180.647c-21.449-21.449-56.173-21.449-77.567 0s-21.449 56.173 0 77.567z'/%3E%3C/svg%3E");
        --ctrl-select-menu-hover: #f1f1f1;
      }
  :root {
        --ctrl-select-item: inherit;
        --ctrl-select-item-bg: rgba(0,0,0,0.04);
        --ctrl-select-item-del-display: none;
        --ctrl-select-item-del: var(--ctrl-icon);
        --ctrl-select-item-del-img: var(--wup-icon-cross);
        --ctrl-select-item-del-size: 0.8em;
        --ctrl-select-gap: 6px;
      }
  
      WUP-SELECTMANY {
        --ctrl-focus-border: var(--ctrl-focus);
        contain: style;
        display: block;
        margin-bottom: 20px;
        box-shadow: 0 0 0 1px var(--ctrl-border);
        border-radius: var(--ctrl-border-radius);
        background: var(--ctrl-bg);
        cursor: pointer;
        -webkit-tap-highlight-color: transparent;
      }
      WUP-SELECTMANY strong,
      WUP-SELECTMANY legend {
        color: var(--ctrl-label);
        pointer-events: none;
      }
      WUP-SELECTMANY[invalid],
      WUP-SELECTMANY[invalid] &gt; [menu] {
        --ctrl-focus-border: var( --ctrl-invalid-border);
        box-shadow: 0 0 3px 0 var(--ctrl-focus-border);
      }
      WUP-SELECTMANY:focus-within,
      WUP-SELECTMANY:focus-within &gt; [menu] {
        box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
      }
      WUP-SELECTMANY:focus-within strong,
      WUP-SELECTMANY:focus-within legend {
        color: var(--ctrl-focus-label);
        pointer-events: initial;
      }
      [disabled] WUP-SELECTMANY,
      WUP-SELECTMANY[disabled] {
        opacity: 0.6;
        cursor: not-allowed;
        -webkit-user-select: none;
        user-select: none;
      }
      [disabled] WUP-SELECTMANY &gt; *,
      WUP-SELECTMANY[disabled] &gt; * {
        pointer-events: none;
      }
      WUP-SELECTMANY label {
        display: flex;
        align-items: center;
        box-sizing: border-box;
        font: inherit;
        cursor: inherit;
        padding: var(--ctrl-padding);
        padding-top: 0;
        padding-bottom: 0;
      }
      WUP-SELECTMANY input,
      WUP-SELECTMANY textarea {
        padding: 0;
        margin: 0;
        cursor: inherit;
      }
      WUP-SELECTMANY [contenteditable=true] {
        margin: var(--ctrl-padding);
        margin-left: 0;
        margin-right: 0;
        cursor: inherit;
      }
      WUP-SELECTMANY strong {
        cursor: inherit;
      }
      WUP-SELECTMANY strong:empty {
        display: none;
      }
      WUP-SELECTMANY [aria-required="true"] + strong:after,
      WUP-SELECTMANY fieldset[aria-required="true"] &gt; legend:after {
        content: "*";
        font-size: larger;
        font-weight: bolder;
        line-height: 0;
      }
      WUP-SELECTMANY [error] {
        cursor: pointer;
        font-size: small;
        color: var(--ctrl-err-text);
        background: var(--ctrl-err-bg);
        overflow: auto;
        overflow: overlay;
      }
      WUP-SELECTMANY [error] ul {
        margin:0; padding:2px 4px 2px;
      }
      WUP-SELECTMANY [error] li {
        display: flex;
        align-items: center;
        margin-left: -5px;
      }
      WUP-SELECTMANY [error] li:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-dot);
        --ctrl-icon: var(--ctrl-err-text);
        
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
      }
      WUP-SELECTMANY [error] li[valid] {
        color: var(--ctrl-err-icon-valid);
      }
      WUP-SELECTMANY [error] li[valid]:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-check);
        --ctrl-icon: var(--ctrl-err-icon-valid);
      }
      WUP-SELECTMANY:focus-within [error] {
        max-height: none;
      }
      @media (hover: hover) and (pointer: fine) {
        WUP-SELECTMANY:hover,
        WUP-SELECTMANY:hover&gt;[menu],
        WUP-SELECTMANY[hovered],
        WUP-SELECTMANY[hovered]&gt;[menu] {
          box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
        }
      }
        WUP-SELECTMANY {
          contain: style;
          cursor: text;
        }
        WUP-SELECTMANY label &gt; span {
          width: 100%;
          position: relative;
          display: flex;
          flex-direction: row-reverse;
        }
        WUP-SELECTMANY input,
        WUP-SELECTMANY textarea,
        WUP-SELECTMANY [maskholder],
        WUP-SELECTMANY [prefix],
        WUP-SELECTMANY [postfix] {
          padding: var(--ctrl-padding);
          padding-left: 0;
          padding-right: 0;
          font: inherit;
          color: inherit;
          margin: 0;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
        }
        WUP-SELECTMANY input,
        WUP-SELECTMANY textarea,
        WUP-SELECTMANY [contenteditable=true],
        WUP-SELECTMANY [maskholder],
        WUP-SELECTMANY [postfix] {
          width: 100%;
          box-sizing: border-box;
          border: none;
          background: none;
          outline: none;
        }
        WUP-SELECTMANY [prefix],
        WUP-SELECTMANY [postfix] {
          color: var(--ctrl-label);
          flex-shrink: 0;
        }
        WUP-SELECTMANY [maskholder],
        WUP-SELECTMANY [prefix],
        WUP-SELECTMANY [postfix] {
          display: none;
          pointer-events: none;
          text-overflow: initial;
          white-space: pre;
        }
        WUP-SELECTMANY [postfix] {
          position: absolute;
        }
        WUP-SELECTMANY [maskholder] {
          position: absolute;
          opacity: 0.65;
        }
        WUP-SELECTMANY [maskholder]&gt;i,
        WUP-SELECTMANY [postfix]&gt;i {
          visibility: hidden;
          font: inherit;
          white-space: pre;
        }
        WUP-SELECTMANY input:-webkit-autofill,
        WUP-SELECTMANY textarea:-webkit-autofill,
        WUP-SELECTMANY [contenteditable=true]:-webkit-autofill {
          font: inherit;
          -webkit-background-clip: text;
        }
        WUP-SELECTMANY input:autofill,
        WUP-SELECTMANY textarea:autofill,
        WUP-SELECTMANY [contenteditable=true]:autofill {
          font: inherit;
          background-clip: text;
        }
        WUP-SELECTMANY strong {
          display: block;
          position: absolute;
          top: 50%;
          left: 0;
          padding: 0;
          margin: 0;
          box-sizing: border-box;
          max-width: 100%;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
          transform-origin: top left;
          transform: translateY(-50%);
          font-weight: normal;
          text-decoration: none;
        }
        @media not all and (prefers-reduced-motion) {
          WUP-SELECTMANY strong {
            transition: top var(--anim), transform var(--anim), color var(--anim);
          }
        }
        WUP-SELECTMANY input:not(:focus)::placeholder,
        WUP-SELECTMANY textarea:not(:focus)::placeholder {
          color: transparent;
        }
        WUP-SELECTMANY:focus-within strong,
        WUP-SELECTMANY input:not(:placeholder-shown) + strong,
        WUP-SELECTMANY textarea:not(:placeholder-shown) + strong,
        WUP-SELECTMANY [contenteditable=true]:not(:empty) + strong,
        WUP-SELECTMANY legend {
          top: 0.2em;
          transform: scale(0.9);
        }
        WUP-SELECTMANY:focus-within [maskholder],
        WUP-SELECTMANY:focus-within [prefix],
        WUP-SELECTMANY:focus-within [postfix],
        WUP-SELECTMANY input:not(:placeholder-shown) ~ [prefix],
        WUP-SELECTMANY input:not(:placeholder-shown) ~ [postfix],
        WUP-SELECTMANY textarea:not(:placeholder-shown) ~ [prefix],
        WUP-SELECTMANY textarea:not(:placeholder-shown) ~ [postfix] {
          display: inline-block;
        }
        /* style for icons */
        WUP-SELECTMANY label button,
        WUP-SELECTMANY label button:after,
        WUP-SELECTMANY label:after,
        WUP-SELECTMANY label:before {
          
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
          -webkit-mask-image: none;
          mask-image: none;
        }
        WUP-SELECTMANY label:after {
          cursor: pointer;
          margin-right: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-SELECTMANY label:before {
          cursor: pointer;
          margin-left: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-SELECTMANY label button {
          contain: strict;
          position: relative;
          z-index: 1;
          font-size: inherit;
        }
        WUP-SELECTMANY label&gt;span + button {
          margin-right: -0.5em;
        }
        WUP-SELECTMANY button[clear] {
          align-self: center;
          background: none;
          cursor: pointer;
          --ctrl-icon-img: var(--wup-icon-cross);
        }
        WUP-SELECTMANY button[clear]:after {
          content: "";
          padding: 0;
          -webkit-mask-image: var(--ctrl-icon-img);
          mask-image: var(--ctrl-icon-img);
        }
        WUP-SELECTMANY button[clear=back]:after {
          --ctrl-icon-img: var(--wup-icon-back);
        }
        WUP-SELECTMANY button[clear]:after,
        WUP-SELECTMANY button[clear]:before {
          position: absolute;
          top: 50%; left: 50%;
          transform: translate(-50%, -50%);
          width: 100%;
        }
        WUP-SELECTMANY button[clear]:before {
          width: var(--ctrl-clear-hover-size);
          padding-top: var(--ctrl-clear-hover-size);
        }
        WUP-SELECTMANY[disabled] button[clear],
        WUP-SELECTMANY[readonly] button[clear] {
          display: none;
        }
        @media (hover: hover) and (pointer: fine) {
          WUP-SELECTMANY button[clear]:hover {
            box-shadow: none;
          }
          WUP-SELECTMANY button[clear]:hover:before {
            content: "";
            border-radius: 50%;
            box-shadow: inset 0 0 0 99999px var(--ctrl-clear-hover);
          }
          WUP-SELECTMANY button[clear]:hover:after {
            background-color: var(--ctrl-err-text);
          }
          WUP-SELECTMANY[readonly] button[clear] {
            pointer-events: none;
          }
        }
      WUP-SELECTMANY {
        cursor: pointer;
      }
      WUP-SELECTMANY input {
        cursor: text;
      }
      WUP-SELECTMANY input:placeholder-shown,
      WUP-SELECTMANY input:read-only {
        cursor: pointer;
      }
      WUP-SELECTMANY label::after {
        content: "";
        -webkit-mask-image: var(--ctrl-icon-img);
        mask-image: var(--ctrl-icon-img);
      }
      @media not all and (prefers-reduced-motion) {
        WUP-SELECTMANY label::after {
          transition: transform var(--anim);
        }
      }
      WUP-SELECTMANY button[clear] {
        margin: 0;
      }
      WUP-SELECTMANY &gt; [menu] {
        padding: 0;
        max-height: 300px;
        z-index: 90010;
      }
      WUP-SELECTMANY {
        --ctrl-icon-img: var(--ctrl-select-icon-img);
      }
      WUP-SELECTMANY label::after {
        height: 100%;
        align-self: center;
      }
      WUP-SELECTMANY[opened] label::after {
        transform: rotate(180deg);
      }
      
WUP-SELECTMANY [menu] {
  padding: 0;
  overflow: hidden;
}
WUP-SELECTMANY [menu] ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
  cursor: pointer;
  overflow: auto;
  max-height: 300px;
}

WUP-SELECTMANY [menu] ul::-webkit-scrollbar {
  width: 10px; height: 10px;
  cursor: pointer;
}
WUP-SELECTMANY [menu] ul::-webkit-scrollbar-corner {
  background: none;
  cursor: pointer;
}
WUP-SELECTMANY [menu] ul::-webkit-scrollbar-thumb {
  border: 3px solid rgba(0,0,0,0);
  background-clip: padding-box;
  background-color: var(--scroll, rgba(0,0,0,0.2));
  border-radius: 999px;
  cursor: pointer;
}
WUP-SELECTMANY [menu] ul::-webkit-scrollbar-track-piece:vertical:start,
WUP-SELECTMANY [menu] ul::-webkit-scrollbar-track-piece:vertical:end,
WUP-SELECTMANY [menu] ul::-webkit-scrollbar-track-piece:horizontal:start,
WUP-SELECTMANY [menu] ul::-webkit-scrollbar-track-piece:horizontal:end {
  margin: 0;
  cursor: pointer;
}
@media (hover) {
  WUP-SELECTMANY [menu] ul::-webkit-scrollbar-thumb:hover {
    background-color: var(--scroll-hover, rgba(0,0,0,0.5));
    cursor: pointer;
  }
}
WUP-SELECTMANY [menu] li {
  padding: 1em;
}
@media (hover: hover) and (pointer: fine) {
  WUP-SELECTMANY [menu] li:hover {
    background-color: var(--ctrl-select-menu-hover);
  }
}
WUP-SELECTMANY [menu] li[aria-selected="true"] {
  color: var(--ctrl-selected);
  display: flex;
}
WUP-SELECTMANY [menu] li[aria-selected="true"]:after {
  content: "";
  --ctrl-icon-img: var(--wup-icon-check);
  
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
  background: var(--ctrl-selected);
  margin-left: auto;
  padding: 0;
}
WUP-SELECTMANY [menu] li[focused] {
  box-shadow: inset 0 0 4px 0 var(--base-focus);
}
      WUP-SELECTMANY strong {
        top: 1.6em;
        margin: calc(var(--ctrl-select-gap) / 2);
      }
      WUP-SELECTMANY label &gt; span {
        flex-wrap: wrap;
        flex-direction: row;
        padding: var(--ctrl-padding);
        padding-left: 0; padding-right: 0;
        margin: calc(var(--ctrl-select-gap) / -2);
      }
      WUP-SELECTMANY [item],
      WUP-SELECTMANY input {
        margin: calc(var(--ctrl-select-gap) / 2);
        padding: var(--ctrl-select-gap);
      }
      WUP-SELECTMANY input {
        flex: 1 1 auto;
        width: 0;
        min-width: 1em;
        padding-left: 0; padding-right: 0;
      }
      WUP-SELECTMANY[filled] input:placeholder-shown,
      WUP-SELECTMANY[filled] input:not(:focus) {
        min-width: 0;
        padding-left: calc(var(--ctrl-select-gap));
        margin-right: 0;
        margin-left: calc(-1 * var(--ctrl-select-gap));
      }
      WUP-SELECTMANY [item] {
        --ctrl-icon: var(--ctrl-select-item-del);
        --ctrl-icon-size: var(--ctrl-select-item-del-size);
        --ctrl-icon-img: var(--ctrl-select-item-del-img);
        color: var(--ctrl-select-item);
        background-color: var(--ctrl-select-item-bg);
        border-radius: var(--ctrl-border-radius);
        cursor: pointer;
        box-sizing: border-box;
        white-space: nowrap;
        overflow: hidden;
      }
      WUP-SELECTMANY [item]:after {
        
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
        display: var(--ctrl-select-item-del-display);
        content: "";
        padding: 0;
        margin-left: 0.5em;
      }
      WUP-SELECTMANY [item][focused],
      WUP-SELECTMANY [item][drag],
      WUP-SELECTMANY [item][drop] {
        box-shadow: inset 0 0 3px 0 var(--ctrl-focus);
      }
      WUP-SELECTMANY [item][removed],
      WUP-SELECTMANY [item][drag][remove]  {
        --ctrl-icon: var(--ctrl-err-text);
        text-decoration: line-through;
        color: var(--ctrl-err-text);
        background-color: var(--ctrl-err-bg);
      }
      WUP-SELECTMANY[readonly] [item] {
        pointer-events: none;
        touch-action: none;
      }
      @media (hover: hover) and (pointer: fine) {
        WUP-SELECTMANY [item]:hover {
          --ctrl-icon: var(--ctrl-err-text);
          text-decoration: line-through;
          color: var(--ctrl-err-text);
          background-color: var(--ctrl-err-bg);
        }
      }
      @media not all and (pointer: fine) {
        WUP-SELECTMANY [item] {
          user-select: none;
          -webkit-user-select: none;
        }
      }
      @media not all and (prefers-reduced-motion) {
        WUP-SELECTMANY [item][removed] {
          transition: all var(--anim-time) ease-in-out;
          transition-property: margin, padding, width, opacity;
          padding-left: 0; padding-right: 0;
          margin-left: 0; margin-right: 0;
          width: 0;
          opacity: 0;
        }
      }
      WUP-SELECTMANY [item][drag] {
        z-index: 99999;
        position: fixed;
        left:0; top:0;
        cursor: grabbing;
        text-decoration: none;
        --ctrl-icon: var(--ctrl-select-item-del);
        color: var(--ctrl-select-item);
        background-color: var(--ctrl-select-item-bg);
      }
      WUP-SELECTMANY [item][drop] {
        opacity: 0.7;
      }
</style>
`;

exports[`control.selectMany common tests snapshot of $defaults 1`] = `
{
  "allowNewValue": false,
  "autoComplete": null,
  "autoFocus": false,
  "clearActions": 2,
  "clearButton": true,
  "debounceMs": 0,
  "disabled": false,
  "focusDebounceMs": 100,
  "hideSelected": false,
  "items": [],
  "label": null,
  "mask": "",
  "maskholder": "",
  "multiple": true,
  "name": null,
  "postfix": "",
  "prefix": "",
  "readOnly": false,
  "readOnlyInput": false,
  "selectOnFocus": false,
  "showCase": 106,
  "sortable": false,
  "storage": "local",
  "storageKey": "",
  "validateDebounceMs": 500,
  "validationCase": 13,
  "validationRules": {
    "$alwaysInvalid": [Function],
    "$alwaysValid": [Function],
    "maxCount": [Function],
    "minCount": [Function],
    "required": [Function],
  },
  "validationShowAll": false,
  "validations": null,
}
`;

exports[`control.selectMany common tests snapshot of $defaults 2`] = `undefined`;

exports[`control.selectMany common tests snapshot of $defaults 3`] = `
[
  "disabled",
  "readonly",
  "w-allownewvalue",
  "w-autocomplete",
  "w-autofocus",
  "w-clearactions",
  "w-clearbutton",
  "w-debouncems",
  "w-disabled",
  "w-focusdebouncems",
  "w-hideselected",
  "w-initvalue",
  "w-items",
  "w-label",
  "w-mask",
  "w-maskholder",
  "w-multiple",
  "w-name",
  "w-postfix",
  "w-prefix",
  "w-readonly",
  "w-readonlyinput",
  "w-selectonfocus",
  "w-showcase",
  "w-sortable",
  "w-storage",
  "w-storagekey",
  "w-validatedebouncems",
  "w-validationcase",
  "w-validationrules",
  "w-validations",
  "w-validationshowall",
]
`;

exports[`control.selectMany sortable: drag&drop 1`] = `
<wup-selectmany
  filled=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        item=""
      >
        Donny
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Mikky
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Leo
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Splinter
      </span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany sortable: drag&drop 3`] = `
<wup-selectmany
  filled=""
  hovered=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        drag=""
        item=""
        style="width: 60px; height: 30px; transform: translate(0px, 0px);"
      >
        Donny
      </span>
      <span
        aria-hidden="true"
        drop=""
        item=""
      >
        Donny
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Mikky
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Leo
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Splinter
      </span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany sortable: drag&drop 14`] = `
<wup-selectmany
  filled=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        item=""
      >
        Mikky
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Leo
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Splinter
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Donny
      </span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany sortable: drag&drop 16`] = `
<wup-selectmany
  filled=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        item=""
      >
        Leo
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Splinter
      </span>
      <span
        aria-hidden="true"
        item=""
      >
        Donny
      </span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany validations $options.validationShowAll 1`] = `
<wup-selectmany
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt2"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style="display: none;"
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    />
    <span>
      This field is required
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min count is 2
      </li>
      <li>
        Max count is 3
      </li>
    </ul>
  </wup-popup>
</wup-selectmany>
`;

exports[`control.selectMany validations $options.validationShowAll 2`] = `
<wup-selectmany
  filled=""
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        item=""
      >
        Donny
      </span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt2"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    />
    <span
      class="wup-hidden"
    >
      Min count is 2
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min count is 2
      </li>
      <li
        valid=""
      >
        Max count is 3
      </li>
    </ul>
  </wup-popup>
</wup-selectmany>
`;

exports[`control.selectMany validations $options.validationShowAll 3`] = `
<wup-selectmany
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt5"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Name
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    >
      Error for First Name:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-selectmany>
`;

exports[`control.selectMany validations options.validationCase 1`] = `
<wup-selectmany
  filled=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-selectmany>
`;

exports[`control.selectMany validations options.validationCase 2`] = `
<wup-selectmany
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-controls="txt2"
        aria-describedby="txt4"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="txt2"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear="back"
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    menu=""
    style="opacity: 0;"
  >
    <ul
      aria-label="Items"
      aria-multiselectable="true"
      id="txt2"
      role="listbox"
      tabindex="-1"
    >
      <li
        role="option"
      >
        Donny
      </li>
      <li
        role="option"
      >
        Mikky
      </li>
      <li
        role="option"
      >
        Leo
      </li>
      <li
        role="option"
      >
        Splinter
      </li>
    </ul>
  </wup-popup>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt4"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-selectmany>
`;

exports[`control.selectMany validations options.validationCase 3`] = `
<wup-selectmany
  filled=""
  invalid=""
  opened=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        item=""
      >
        Donny
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="txt2"
        aria-describedby="txt5"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="txt2"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    menu=""
    style="min-width: 100px;"
  >
    <ul
      aria-label="Items"
      aria-multiselectable="true"
      id="txt2"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        role="option"
      >
        Donny
      </li>
      <li
        role="option"
      >
        Mikky
      </li>
      <li
        role="option"
      >
        Leo
      </li>
      <li
        role="option"
      >
        Splinter
      </li>
    </ul>
  </wup-popup>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    style=""
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      custom err here
    </span>
  </wup-popup>
</wup-selectmany>
`;

exports[`control.selectMany validations options.validationCase 4`] = `
<wup-selectmany
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-controls="txt7"
        aria-describedby="txt8"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="txt7"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      style=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt8"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-selectmany>
`;

exports[`control.selectMany with form 1`] = `
<wup-form
  role="form"
>
  <wup-selectmany>
    <label
      for="txt1"
    >
      <span>
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          id="txt1"
          placeholder=" "
          role="combobox"
          type="text"
        />
        <strong>
          First Input
        </strong>
      </span>
      <button
        aria-hidden="true"
        clear=""
        style="display: none;"
        tabindex="-1"
        type="button"
      />
    </label>
  </wup-selectmany>
</wup-form>
`;
